# swe-project

./: .gitignore  AGENTS.md  README.md  admin.html  app.py  db.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
.claude/: settings.local.json
backend/: .env.example  .gitignore  SETUP.md  requirements.txt
backend/apps/accounts/: admin.py  apps.py  auth.py  models.py  serializers.py  urls.py  views.py
backend/apps/itineraries/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/itineraries/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
css/: style.css
js/: app.js
middleware/: auth.js
public/: index.html
public/css/: style.css
public/js/: app.js
routes/: admin.js  ai.js  auth.js  itinerary.js
src/chromadb_document_processor/: crew.py  flights_crew.py  main.py
src/chromadb_document_processor/config/: agents.yaml  tasks.yaml
src/chromadb_document_processor/tools/: flight_search_tool.py
